# c-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  SECURITY.md  idf_component.yml  keywords.txt  library.json  library.properties  platformio.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-flashable.yml  ci.yml  firmware.yml  publish.yml  release.yml
build-test-san/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_core  test_json
examples/BME280_Dashboard/: BME280_Dashboard.ino
examples/BasicTelemetry/: BasicTelemetry.ino
examples/SessionRecording/: SessionRecording.ino
examples/WiFiReconnect/: WiFiReconnect.ino
examples/arduino_basic/: arduino_basic.ino  plexus_example.ino
examples/esp32_autodiscovery/: main.c
examples/esp32_basic/: main.c
examples/esp32_flashable/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
examples/esp32_flashable/main/: CMakeLists.txt  i2c_scan.c  i2c_scan.h  main.c
examples/esp32_websocket/: CMakeLists.txt  sdkconfig.defaults
examples/esp32_websocket/main/: CMakeLists.txt  main.c
examples/stm32_freertos/: main.c
examples/typed_commands/: main.c
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  adc.c  adc.h  canbus.c  canbus.h  gps.c  gps.h  main.c  plexus_firmware_config.h  provisioning.c  provisioning.h  system_metrics.c  system_metrics.h  tls_certs.h  wifi.c  wifi.h
hal/arduino/: plexus_hal_arduino.cpp
hal/esp32/: plexus_hal_esp32.c  plexus_hal_i2c_esp32.c  plexus_hal_mqtt_esp32.c  plexus_hal_nvs_config.c  plexus_hal_nvs_config.h  plexus_hal_storage_esp32.c  plexus_hal_ws_esp32.c
hal/stm32/: plexus_hal_i2c_stm32.c  plexus_hal_stm32.c
hal/template/: plexus_hal_template.c
include/: plexus.h  plexus_config.h
scripts/: bump-version.sh
src/: plexus.c  plexus.h  plexus.hpp  plexus_commands.c  plexus_config.h  plexus_hal_arduino.cpp  plexus_internal.h  plexus_json.c  plexus_register.c  plexus_sensors.c  plexus_typed_commands.c  plexus_ws.c  plexus_ws.h
tests/: CMakeLists.txt  mock_hal.c  test_core.c  test_heartbeat.c  test_json.c  test_mqtt.c  test_persist.c  test_register.c  test_sensors.c  test_status.c  test_threadsafe.c
tools/: sensor-db.json
